syntax = "proto3";

package v1;

service ImageService {
    rpc Clear(ClearRequest) returns (ClearResponse);
    rpc Crop(CropRequest) returns (CropResponse);
}

message Image {
    bytes content = 1;
}

message ClearRequest {
    Image image = 1;
}

message ClearResponse {
    Image image = 1;
}

message Ratio {
    uint32 w = 1;
    uint32 h = 2;
}

message CropRequest {
    Image image = 1;
    Ratio ratio = 2;
}

message CropResponse {
    Image image = 1;
}